--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
   --secondary-medium-color: #ffb100;
   --primary-light-color: #ffebc6;
 
-  --border-radius-small: 4px;
+  --border-radius-small: 5px;
 }
 
 * {
@@ -15,7 +15,6 @@
 
 body {
   background-color: var(--primary-light-color);
-  width: 600px;
   margin: 0 auto;
 }
 
@@ -43,6 +42,35 @@ h1 {
 
 .footer {
   background-color: var(--primary-dark-color);
+  border-radius: var(--border-radius-small);
+  position: fixed;
+  bottom: 0;
+  height: 10vh;
+  width: 100%;
+}
+
+.nav-bar {
   display: flex;
   justify-content: space-around;
+  align-items: center;
+  height: 100%;
+}
+
+.nav-bar-items {
+  background-color: var(--primary-medium-color);
+  border-radius: 25px;
+  padding: 0.4em;
+}
+
+.nav-bar-items:hover {
+  background-color: var(--secondary-medium-color);
+  transition: 0.25s linear;
+}
+
+.nav-bar-items:current {
+  background-color: var(--secondary-dark-color);
+}
+
+.nav-bar--btn {
+  width: 30px;
 }
