--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
   --primary-light-color: #ffebc6;
 
   --border-radius-small: 5px;
+  --border-radius-small: 20px;
 }
 
 * {
@@ -34,10 +35,16 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 20px;
+  height: 100vh;
+  width: 100vw;
 }
 
 .question-card {
   background-color: var(--secondary-dark-color);
+  width: 75%;
+  height: 20%;
+  border-radius: var(--border-radius-small);
 }
 
 .footer {
