--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,6 @@ body {
 
 h1 {
   align-self: center;
-  position: sticky;
-  top: 0px;
 }
 
 h2 {
@@ -41,24 +39,28 @@ button {
   font-size: 0.75rem;
   font-weight: bolder;
   margin-block: 1rem;
+  width: 50%;
+  box-shadow: 2px 2px 2px var(--secondary-medium-color);
 }
 
 button:hover {
   background-color: #f194b4;
   font-size: 0.8rem;
-  transition: 0.3s linear;
+  transition: 0.2s linear;
+  box-shadow: none;
 }
 
 .header {
+  position: fixed;
+  top: 0;
+  width: 100%;
   display: flex;
   justify-content: center;
   background-color: var(--primary-dark-color);
   border-radius: var(--border-radius-small);
   color: var(--primary-medium-color);
   padding-block: 10px;
-  /* height: 10vh; */
   text-align: center;
-  margin-bottom: 2vh;
 }
 
 .homepage-main {
@@ -68,18 +70,22 @@ button:hover {
   gap: 20px;
   height: 100vh;
   width: 100vw;
+  padding-top: 12vh;
 }
 
 .question-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: var(--secondary-dark-color);
   width: 75%;
   max-width: 700px;
-  min-height: 200px;
-  height: 20%;
+  min-height: 220px;
   border-radius: var(--border-radius-big);
   text-align: center;
   padding: 1.5rem 1rem;
   color: var(--secondary-medium-color);
+  box-shadow: 5px 5px 5px var(--primary-dark-color);
 }
 
 .footer {
@@ -87,7 +93,6 @@ button:hover {
   border-radius: var(--border-radius-small);
   position: fixed;
   bottom: 0;
-  height: 10vh;
   width: 100%;
 }
 
@@ -96,6 +101,7 @@ button:hover {
   justify-content: space-around;
   align-items: center;
   height: 100%;
+  margin-block: 1.5vh;
 }
 
 .nav-bar-items {
