--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,25 @@ button.show-answer:hover {
 
 .counter-section {
   display: flex;
+  justify-content: space-between;
+  height: 100px;
+}
+
+.counter-section-elements {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  width: 50%;
+}
+
+.counter-created-questions-icon,
+.counter-bookmarks-icon {
+  height: 50%;
+}
+
+.counter-number {
+  color: var(--primary-medium-color);
 }
 
 .question-card {
