--- a/css/style.css
+++ b/css/style.css
@@ -84,8 +84,8 @@ button.show-answer:hover {
 }
 
 .profile-main {
-  height: 100vh;
   width: 100vw;
+  height: 100vh;
   padding-top: 12vh;
   display: flex;
   flex-direction: column;
@@ -155,6 +155,11 @@ button.show-answer:hover {
 
 .counter-number {
   color: var(--primary-medium-color);
+}
+
+.settings--dark-mode {
+  font-size: 0.9rem;
+  color: var(--secondary-medium-color);
 }
 
 .question-card {
