--- a/css/style.css
+++ b/css/style.css
@@ -47,9 +47,11 @@ button {
   margin-block: 1rem;
   width: 50%;
   box-shadow: 2px 2px 2px var(--secondary-medium-color);
-  transition: 0.2s linear;
 }
 
+button.show-answer {
+  transition: 0.2s linear;
+}
 button.show-answer:hover {
   background-color: #f194b4;
   font-size: 0.8rem;
