--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,8 @@ button {
   transition: 0.2s linear;
 }
 
-button.show-answer:hover {
+button.show-answer:hover,
+button.submit-form:hover {
   background-color: #f194b4;
   font-size: 0.8rem;
   box-shadow: none;
