add span for characters left

--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,12 @@ button.submit-form:hover {
   width: 100%;
 }
 
+.remaining-characters {
+  color: var(--primary-medium-color);
+  font-size: 0.6rem;
+  text-align: right;
+}
+
 .profile-main > * {
   width: 75%;
   padding: 20px;
