--- a/css/style.css
+++ b/css/style.css
@@ -295,6 +295,7 @@ input:checked + .slider:before {
   background-color: var(--primary-dark-color);
   color: var(--primary-light-color);
   font-size: 0.4rem;
+  width: 100%;
 }
 
 .footer {
