--- a/css/style.css
+++ b/css/style.css
@@ -50,13 +50,8 @@ button {
   transition: 0.3s ease-in-out;
 }
 
-/* button.show-answer:hover,
+* button.show-answer:hover,
 button.submit-form:hover {
-  background-color: #f194b4;
-  box-shadow: -3px -3px 2px var(--primary-dark-color);
-} */
-
-* button.show-answer:hover {
   animation: border 1.5s linear infinite;
 }
 @keyframes border {
