add several css files and organize css code

--- a/css/global.css
+++ b/css/global.css
@@ -49,3 +49,49 @@ button {
   box-shadow: 2px 2px 2px var(--secondary-medium-color);
   transition: 0.3s ease-in-out;
 }
+
+.header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  background-color: var(--primary-dark-color);
+  border-radius: var(--border-radius-small);
+  color: var(--primary-medium-color);
+  padding-block: 10px;
+  text-align: center;
+  z-index: 2;
+  box-shadow: 2px 2px 4px #26281f;
+}
+
+.footer {
+  background-color: var(--primary-dark-color);
+  border-radius: var(--border-radius-small);
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+.nav-bar {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 100%;
+  margin-block: 1.5vh;
+}
+
+.nav-bar-items {
+  background-color: var(--primary-medium-color);
+  border-radius: 25px;
+  padding: 0.4em;
+}
+
+.nav-bar-items:hover {
+  background-color: var(--secondary-medium-color);
+  transition: 0.3s linear;
+}
+
+.nav-bar--btn {
+  width: 30px;
+}
