--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,13 @@
 @import "./global.css";
+@import "./form.css";
+@import "./profile.css";
+@import "./darkmode.css";
 
-* button.show-answer: hover,
-  button.submit-form: hover {
+* button.show-answer:hover,
+button.submit-form:hover {
   animation: border 1.5s linear infinite;
 }
+
 @keyframes border {
   0% {
     box-shadow: 2px 2px 4px 2px var(--secondary-medium-color);
@@ -24,21 +28,6 @@
 
 .hidden {
   display: none;
-}
-
-.header {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  background-color: var(--primary-dark-color);
-  border-radius: var(--border-radius-small);
-  color: var(--primary-medium-color);
-  padding-block: 10px;
-  text-align: center;
-  z-index: 2;
-  box-shadow: 2px 2px 4px #26281f;
 }
 
 .homepage-main,
@@ -71,30 +60,6 @@
   --> need to understand fully later! */
   overflow-y: auto;
   max-height: calc(100vh - 70px);
-}
-
-.form {
-  background-color: var(--secondary-dark-color);
-  border-radius: var(--border-radius-big);
-  padding: 1.5rem 1rem;
-  color: var(--secondary-medium-color);
-  font-weight: bolder;
-  box-shadow: 5px 5px 5px var(--primary-dark-color);
-}
-
-.form > * {
-  display: block;
-  margin: 1rem auto;
-}
-
-.form > input {
-  width: 100%;
-}
-
-.remaining-characters {
-  color: var(--primary-medium-color);
-  font-size: 0.6rem;
-  text-align: right;
 }
 
 .profile-main > * {
@@ -163,18 +128,6 @@
   color: var(--primary-medium-color);
 }
 
-.settings--dark-mode-heading {
-  font-size: 0.9rem;
-  color: var(--secondary-medium-color);
-}
-
-.settings--dark-mode {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  gap: 25px;
-}
-
 .question-card {
   display: flex;
   flex-direction: column;
@@ -216,79 +169,4 @@
   color: var(--primary-light-color);
   font-size: 0.4rem;
   width: 100%;
-}
-
-.footer {
-  background-color: var(--primary-dark-color);
-  border-radius: var(--border-radius-small);
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-}
-
-.nav-bar {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  height: 100%;
-  margin-block: 1.5vh;
-}
-
-.nav-bar-items {
-  background-color: var(--primary-medium-color);
-  border-radius: 25px;
-  padding: 0.4em;
-}
-
-.nav-bar-items:hover {
-  background-color: var(--secondary-medium-color);
-  transition: 0.3s linear;
-}
-
-.nav-bar--btn {
-  width: 30px;
-}
-
-.dm-btn-container {
-  /* width: 100%; */
-  height: 25px;
-  /* border: 2px solid yellow; */
-  border-radius: var(--border-radius-big);
-}
-
-.dm-btn {
-  width: 50px;
-  height: 25px;
-  border-radius: 100px;
-  margin: auto 0;
-}
-
-.btn-position {
-  position: relative;
-  align-self: start;
-  transition: all 0.3s linear;
-}
-
-.position--0 {
-  top: 0;
-  left: 0;
-}
-
-.position--1 {
-  left: 60%;
-  transition: all 0.3s linear;
-}
-
-.darkmode {
-  /* --primary-dark-color: #003844;
-  --secondary-dark-color: #006c67;
-  --primary-medium-color: #f194b4;
-  --secondary-medium-color: #ffb100;
-  --primary-light-color: #ffebc6; */
-
-  --primary-dark-color: #003844;
-  --secondary-dark-color: #003844;
-  --primary-medium-color: #ffebc6;
-  --secondary-medium-color: #f194b4;
-  --primary-light-color: #01262e;
 }
