--- a/css/darkmode.css
+++ b/css/darkmode.css
@@ -14,6 +14,7 @@
   /* width: 100%; */
   height: 25px;
   /* border: 2px solid yellow; */
+  border: none;
   border-radius: var(--border-radius-big);
 }
 
